# confy

./: .gitignore  BEHAVIOR_MATRIX.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  Cargo.toml  HANDOFF.md  PLANwebnativeui.md  PORTING.md  PRIVACY.md  README.md  RELEASES.md  TAURI.md  TUI.md  VSCODE.md  WEBUI.md  design_index_model.html  test.toml  wrangler.toml
.github/workflows/: publish-vscode.yml  release.yml
crates/confy-core/: Cargo.toml
crates/confy-core/src/: lib.rs
crates/confy-core/src/model/: any_doc.rs  convert.rs  cst_doc.rs  cst_edit.rs  cst_project.rs  document.rs  mod.rs  node.rs
crates/confy-core/src/model/json/: doc.rs  edit.rs  mod.rs  parse.rs  syntax.rs
crates/confy-core/src/model/yaml/: doc.rs  edit.rs  project.rs  syntax.rs
crates/confy-core/src/session/: dispatch.rs  host.rs  i18n.rs  insertion.rs  intent.rs  mod.rs  search.rs  selection.rs  session.rs  state.rs  type_filter.rs  view.rs
crates/confy-core/tests/: no_fs_gate.rs  roundtrip.rs  roundtrip_json.rs  roundtrip_yaml.rs  serde_roundtrip.rs  session_headless.rs  yaml_scratch.rs
crates/confy-core/tests/fixtures/: comments.jsonc  edgecases.json  root_array.json  sample.json  sample.toml
crates/confy-core/tests/fixtures/yaml/: prometheus.yaml  scalars.yaml  simple-config.yaml  tags-and-anchors.yaml
crates/confy-ffi/: Cargo.toml  functional_smoke.mjs
crates/confy-ffi/src/: lib.rs
crates/confy-tauri/: .gitignore  Cargo.toml  tauri.android.conf.json  tauri.conf.json  tauri.windows.conf.json
crates/confy-tauri/capabilities/: default.json
crates/confy-tauri/icons/: icon.icns
crates/confy-tauri/msix/: AppxManifest.xml  STORE.md  pack-msix.ps1
crates/confy-tauri/src/: lib.rs  main.rs
crates/confy-tui/: Cargo.toml
crates/confy-tui/src/: cli.rs  config.rs  lib.rs  main.rs
crates/confy-tui/src/tui/: app.rs  editor.rs  insertion.rs  keys.rs  mod.rs  search.rs  selection.rs  state.rs  type_filter.rs  ui.rs
crates/tauri-plugin-confy-picker/: Cargo.toml  README.md  build.rs  package.json
crates/tauri-plugin-confy-picker/android/: build.gradle.kts
crates/tauri-plugin-confy-picker/android/src/androidTest/java/: ExampleInstrumentedTest.kt
crates/tauri-plugin-confy-picker/android/src/main/java/net/turkeyang/confy/picker/: ConfyPickerPlugin.kt
crates/tauri-plugin-confy-picker/android/src/test/java/: ExampleUnitTest.kt
crates/tauri-plugin-confy-picker/guest-js/: index.ts
crates/tauri-plugin-confy-picker/permissions/: default.toml
crates/tauri-plugin-confy-picker/permissions/autogenerated/: reference.md
crates/tauri-plugin-confy-picker/permissions/autogenerated/commands/: pick_writable.toml
crates/tauri-plugin-confy-picker/permissions/schemas/: schema.json
crates/tauri-plugin-confy-picker/src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
docs/superpowers/plans/: 2026-05-27-confy-toml-config-editor-plan.md  2026-06-08-clipboard-mode-separation.md  2026-06-08-cst-backend-migration.md  2026-06-08-move-comment-clipboard.md  2026-06-09-cross-layer-ops-and-line-paste.md  2026-06-10-kind-column-help-legend-handover.md  2026-06-10-reconstruct-increments-handover.md  2026-06-12-multiformat-handover-prompts.md  2026-06-12-phase1-backend-abstraction.md  2026-06-13-json-jsonc-backend.md  2026-06-13-yaml-subset-backend.md  2026-07-09-help-about-open-panel.md  2026-07-11-i18n-plan.md  2026-07-12-desktop-menu-plan.md  2026-07-12-mobile-tauri-spec.md  2026-07-13-mobile-m1-android-plan.md  2026-07-15-vscode-extension-m1.md  2026-07-16-vscode-m1_5-shared-dirty-state.md  2026-07-17-breadcrumb-nav.md
docs/superpowers/specs/: 2026-05-27-confy-toml-config-editor-design.md  2026-06-12-multiformat-backends-design.md  2026-06-26-web-respons-migrate-to-touch-ready.html  2026-07-09-help-about-open-panel-design.md  2026-07-15-vscode-extension-design.md
editors/vscode/: .vscodeignore  README.md  build-full.ps1  build.mjs  package-lock.json  package.json  tsconfig.json
editors/vscode/src/: editorProvider.ts  extension.ts  rawPreview.ts
i18n/: en.json  zh-TW.json
src/: cli.rs  main.rs
src/model/: any_doc.rs  convert.rs  cst_doc.rs  cst_edit.rs  cst_project.rs  document.rs  fragment.rs  mod.rs  node.rs  project.rs  toml_doc.rs  value.rs
src/model/json/: doc.rs  edit.rs  mod.rs  parse.rs  project.rs  syntax.rs
src/model/yaml/: doc.rs  edit.rs  mod.rs  parse.rs  project.rs  syntax.rs
src/tui/: app.rs  editor.rs  insertion.rs  keys.rs  mod.rs  search.rs  selection.rs  state.rs  type_filter.rs  ui.rs
tests/: convert_cli.rs  roundtrip.rs  roundtrip_json.rs  roundtrip_yaml.rs  yaml_scratch.rs
tests/fixtures/: expected_after_edit.toml  sample.jsonc  sample.toml  sample.yaml  test.json  test.toml  test.yaml
tests/fixtures/yaml/: comments.yaml  deployment.yaml  docker-compose.yaml  flow-style.yaml  github-actions.yaml  helm-values.yaml  multi-doc.yaml
web/: breadcrumb.ts  build.mjs  cf-build.sh  confy.ts  convert-dialog.ts  dnd.ts  escape.ts  fs.ts  help-content.ts  host-io.ts  i18n.ts  index.html  kind-labels.ts  manifest.webmanifest  menu.ts  package-lock.json  package.json  panel.ts  path-utils.ts  prompt.ts  render.ts  samples.ts  select.ts  serve.mjs  style.css  sw.js  toolbar-fold.spec.mjs  toolbar-fold.ts  touch.html  tsconfig.json  typefilter.ts  types.ts  ui.ts  vscode-protocol.ts  vscode.ts
web/touch/: app.ts  render.ts  style.css
