[workspace]
members = ["crates/confy-core", "crates/confy-tui"]
resolver = "2"

[workspace.package]
version = "0.7.0"
edition = "2021"
authors = ["wen"]
license = "MIT"
repository = "https://github.com/superyngo/confy"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
taplo = "0.14"            # lossless rowan CST backend (comments as real nodes)
rowan = "=0.15.18"        # lossless hand-rolled JSON/JSONC CST (same version taplo uses)
tempfile = "3"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
strip = true
