[package]
name = "tauri-plugin-confy-picker"
version = "0.1.0"
authors = [ "confy" ]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-confy-picker"

[dependencies]
tauri = { version = "2.11.3" }
serde = "1.0"
thiserror = "2"

[build-dependencies]
tauri-plugin = { version = "2.6.3", features = ["build"] }
